# r3bar

./: .gitignore  Cargo.toml  NEXT.txt  README.md  README.org  benchmark.sh  built  perf.data
r3bar/: Cargo.toml
r3bar/src/: bar.rs  error.rs  lib.rs  r3ipc.rs
r3bar/src/gauges/: kitt.rs
r3bar/src/sensors/: ipc.rs  volume.rs  wifi.rs
r3bar/src/widgets/: mod.rs
r3bar/tests/: r3ipc_test.rs
r3msg/: Cargo.toml
r3msg/src/: main.rs  mod.rs  r3msg.rs
src/: animate.rs  bar.rs  error.rs  lib.rs  main.rs  message.rs  mod.rs  r3ipc.rs
src/display/: display.rs
src/gauges/: button_row.rs  icon_text.rs  kitt.rs  mod.rs  redkitt.rs  simple_text.rs
src/sensors/: battery.rs  diskusage.rs  i3workspace.rs  ipc.rs  mod.rs  systime.rs  volume.rs  wifi.rs
src/widgets/: kitt.rs  mod.rs  sep.rs
tests/: r3ipc.rs
