[package]
name = "r3bar"
version = "0.1.0"
authors = ["bpostlethwaite <post.ben.here@gmail.com>"]

[dependencies]
byteorder = "0.5.3"
chrono = "0.2"
conrod = "0.44.0"
gfx_device_gl = "0.11.0"
i3ipc = "0.4.2"
piston_window = "0.52"
regex = "0.1"
serde = "0.8.12"
serde_json = "0.8.2"
unix_socket = "0.5.0"

[replace]
"glutin:0.6.1" = { git = "https://github.com/bpostlethwaite/glutin", branch = "x11-statusbar-patch"}